--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "examen-final-m3-elva",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
